thêm logo và sửa lại file pom